ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: quantum-design-system
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/upstream-vhost: "quantum-design-system.radosgw.svc.cluster.local"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/$ /index.html break;
spec:
  rules:
  - host: "qds.hq.sendoutcards.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: radosgw-vw
          servicePort: 80
  tls:
  - hosts:
    - qds.hq.sendoutcards.com
